--- a/resources/js/plugins/Webrtc/assets/scss/DefaultThemeStyle.scss
+++ b/resources/js/plugins/Webrtc/assets/scss/DefaultThemeStyle.scss
@@ -3,12 +3,12 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url('../../assets/webrtc/fonts/Roboto/roboto-light.eot');
-  src: url('../../assets/webrtc/fonts/Roboto/roboto-light.eot?#iefix') format('embedded-opentype'),
-  url('../../assets/webrtc/fonts/Roboto/roboto-light.woff2') format('woff2'),
-  url('../../assets/webrtc/fonts/Roboto/roboto-light.woff') format('woff'),
-  url('../../assets/webrtc/fonts/Roboto/roboto-light.ttf') format('truetype'),
-  url('../../assets/webrtc/fonts/Roboto/roboto-light.svg#robotolight') format('svg');
+  src: url('../assets/fonts/Roboto/roboto-light.eot');
+  src: url('../assets/fonts/Roboto/roboto-light.eot?#iefix') format('embedded-opentype'),
+  url('../assets/fonts/Roboto/roboto-light.woff2') format('woff2'),
+  url('../assets/fonts/Roboto/roboto-light.woff') format('woff'),
+  url('../assets/fonts/Roboto/roboto-light.ttf') format('truetype'),
+  url('../assets/fonts/Roboto/roboto-light.svg#robotolight') format('svg');
 }
 
 :root {
