--- a/resources/js/plugins/Webrtc/assets/scss/DefaultThemeStyle.scss
+++ b/resources/js/plugins/Webrtc/assets/scss/DefaultThemeStyle.scss
@@ -371,47 +371,17 @@ table {
   }
 }
 
-#video-meeting {
-  .room-item {
-    position: relative;
-    overflow: hidden;
+#video-conference {
+  position: fixed;
+  width: 100%;
+  height: calc(100vh - 100px);
 
-    .microphone-mute {
-      position: absolute;
-      z-index: 3;
-      color: #fff;
-      top: 25px;
-      right: 25px;
+  #video-meeting {
+    .user-item {
 
-      svg {
-        width: 32px;
-        height: 32px;
-      }
-    }
 
-    .microphone-unmute {
-      position: absolute;
-      z-index: 3;
-      color: #fff;
-      cursor: pointer;
-      bottom: 25px;
-      right: 25px;
-    }
+      .user-video {
 
-    .user-video {
-      overflow: hidden;
-      border-radius: 8px;
-
-      .camera-mute {
-        position: absolute;
-        z-index: 2;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        color: #fff;
-        background: #333;
       }
     }
   }
